--- a/MetalInMotion/Config/DefaultEngine.ini
+++ b/MetalInMotion/Config/DefaultEngine.ini
@@ -1,7 +1,10 @@
 
+
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Desktop
-DefaultGraphicsPerformance=EGraphicsPreset::Maximum
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
@@ -11,3 +14,4 @@ GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/MetalInMotion")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/MetalInMotion")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MetalInMotionGameModeBase")
+
