--- a/MetalInMotion/Config/DefaultEngine.ini
+++ b/MetalInMotion/Config/DefaultEngine.ini
@@ -15,3 +15,6 @@ GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/MetalInMotion")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MetalInMotionGameModeBase")
 
+[SystemSettings]
+Slate.EnableTooltips=0
+r.PathTracing.ProgressDisplay=1
